# libdce

./: .gitignore  Makefile.am  configure.ac
ducati/: config.bld
ducati/ti/dce/: dce.c  dce_core0.cfg  ivahd.c  main.c  package.xdc
ducati/ti/dce/baseimage/: dce_core0.cfg  dce_ipu.cfg  load_task.c  main.c  package.bld  profile.c  profile.h
firmware/: ducati-m3-core0.xem3
